[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A tool by Sanjay."
authors = [
    {name = "sxnjayy",email = "104524087+skp6850@users.noreply.github.com"}
]
license = {text = "Nil"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
